Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="home.html" class="active" id="l0">Home</a></li>
-                <li><a href="p1.html" class="active" id="l1">Explore</a></li>
-                <li><a href="about.html" class="active" id="l2">About</a></li>
+                <li><a href="inex.html" class="active" id="l0">Home</a></li>
+                <li><a href="page1.html" class="active" id="l1">Explore</a></li>
+                <li><a href="page2.html" class="active" id="l2">About</a></li>
                 
 
             </ul>
@@ -219,9 +219,9 @@
         </div>
 
         <div class="Button">
-            <button id="a1"><a href="C:\Users\Lenovo\Desktop\web dev\minor project\login.html" id="login_page">log
+            <button id="a1"><a href="page3.html" id="login_page">log
                     in</a></button>
-            <button id="a2"><a href="signin.html" id="signup_page">sign up</a></button>
+            <button id="a2"><a href="page4.html" id="signup_page">sign up</a></button>
         </div>
         <div id="s">
             <input type="text" placeholder="Search for historical sites...">
