--- a/page1.html
+++ b/page1.html
@@ -396,17 +396,17 @@
       </div>
       <div class="right">
         <ul>
-          <li><a href="home.html" class="active" id="l0">Home</a></li>
-          <li><a href="p1.html" class="active" id="l1">Explore</a></li>
-          <li><a href="about.html" class="active" id="l2">About</a></li>
+          <li><a href="index.html" class="active" id="l0">Home</a></li>
+          <li><a href="page11.html" class="active" id="l1">Explore</a></li>
+          <li><a href="page2.html" class="active" id="l2">About</a></li>
 
         </ul>
 
       </div>
 
       <div class="Button">
-        <button id="a1"><a href="login.html" id="login_page">log in</a></button>
-        <button id="a2"><a href="signin.html" id="signup_page">sign up</a></button>
+        <button id="a1"><a href="page3.html" id="login_page">log in</a></button>
+        <button id="a2"><a href="page4.html" id="signup_page">sign up</a></button>
       </div>
     </header>
 
