Update and rename login.html to page3.html

--- a/page3.html
+++ b/page3.html
@@ -81,10 +81,10 @@
             <input type="submit" value="Login">
         </form>
         <div class="signup-link">
-            Don't have an account? <a href="signin.html">Sign up</a>
+            Don't have an account? <a href="page4.html">Sign up</a>
         </div>
         <div class="signup-link">
-            go to home page <a href="home.html"> Go to Homepage</a>
+            go to home page <a href="index.html"> Go to Homepage</a>
         </div>
     </div>
 
