Update and rename signin.html to page4.html

--- a/page4.html
+++ b/page4.html
@@ -77,10 +77,10 @@
             <input type="submit" value="Sign in"><br><br>
         </form>
         <div class="signup-link">
-            already have a account <a href="login.html">login</a>
+            already have a account <a href="page3.html">login</a>
         </div>
         <div class="signup-link">
-            go to home page <button ><a href="home.html"> Go to Homepage</a></button>
+            go to home page <button ><a href="index.html"> Go to Homepage</a></button>
         </div>
     </div>
 
