--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <style>
     body {
-      background-image: url('HISTORIC SITES IN INDIA.png');
+      background-image: url('https://img.freepik.com/free-photo/beautiful-rainbow-nature_23-2151498240.jpg?t=st=1718734012~exp=1718737612~hmac=b2fe7be6c1d31d9b5b54620793c6fb097be44b6a0ea81d8f8dd6b926e8b2ddea&w=1060');
       height: 1500px;
       width: 100%;
       background-repeat: no-repeat;
